# release-maestro

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CONTEXT.md  LICENSE.md  MIGRATION_STATUS.md  Makefile  README.md  THIRD_PARTY_NOTICES.txt  angular.json  colors.json  drizzle.config.ts  electron-builder.json  eslint.config.mjs  jest.config.ts  nx.json  package-lock.json  package.json  skills-lock.json  tailwind.config.js  todo.md  tsconfig.base.json  tsconfig.json  tsconfig.serve.json
.agents/regression/: SKILL.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  macos.yml  quality.yml  ubuntu.yml  windows.yml
app/: app-env.ts  base.exceptions.ts  di.ts  main.ts  package-lock.json  package.json  settings.backend.service.ts  tsconfig.serve.json
app/bandcamp/: bandcamp-api.backend.service.ts  bandcamp-api.exceptions.ts  bandcamp-email.backend.service.ts  bandcamp.email-parser.ts
app/database/: database.client.ts  (+1 more)
apple-scripts/: export-emails.applescript
apps/metadata-engine/: Cargo.toml  project.json
apps/metadata-engine/scripts/: build.mjs
apps/metadata-engine/src/: constants.rs  image_format.rs  main.rs  metadata.rs  protocol.rs
apps/metadata-engine/tests/: protocol.rs
docs/: testing.md
drizzle/: 0000_initial-migration.sql  0000_initial.sql  0001_library-song-scan-model.sql
e2e/: main.spec.ts
playwright-report/: index.html
scripts/: rewrite-imports.js
shared/: index.ts  tsconfig.json
src/: index.html  main.ts  styles.css  styles.scss  tsconfig.app.json  tsconfig.spec.json  typings.d.ts
(+230 files in other folders)
